--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Contact Me!</h1>
+    <h1>Contact</h1>
+
+    <form>
+        <div class="form-group">
+            <label for="exampleFormControlInput1">Name</label>
+            <input type="name" class="form-control" id="exampleFormControlInput1" placeholder= "John Smith">
+          </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Email</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder= "example@gmail.com">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Example textarea</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></Message>
+        </div>
+      </form>
 </body>
 </html>
+
