--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
     crossorigin="anonymous"
     />
+    <style>
+    .navbar-brand {
+      background-color: darkturquoise
+      }
+    </style>
 </head>
 <body>
     <!--Bootstrap Navbar!-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Crystal Watkins</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <div class="container">
+        <a class="navbar-brand" href="#">Crystal Watkins</a>
+  </nav>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" 
+  data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" 
+  aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
