--- a/index.html
+++ b/index.html
@@ -11,37 +11,41 @@
     crossorigin="anonymous"
     />
     <style>
+    .navbar {
+      border-bottom: 3px solid lightgrey;
+      }
     .navbar-brand {
-      background-color: darkturquoise
+      background-color: darkturquoise;
+      color: white;
+      float:left;;
+      }
+      .nav-index {
+        float:right;
+      }
+      .nav-portfolio {
+        float: right;
+      }
+      .nav-contact {
+        float: right;
       }
     </style>
 </head>
 <body>
     <!--Bootstrap Navbar!-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="#">Crystal Watkins</a>
-  </nav>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" 
-  data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" 
-  aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="./index.html">About <span class="sr-only">(current)</span></a>
+    <nav class="navbar fixed-top navbar-light bg-white">
+      <a class="navbar-brand" href="#">Crystal Watkins</a>
+    <ul class="navbar-index">
+      <li class="nav-index">
+        <a class="nav-link" href="./index.html">About</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-portfolio">
         <a class="nav-link" href="./Portfolio.html">Portfolio</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-contact">
         <a class="nav-link" href="./contact.html">Contact</a>
       </li>  
-        </div>
       </li>
     </ul>
-  </div>
 </nav>
     
 
