added portfolio page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     .navbar-brand {
       background-color: darkturquoise;
       color: white;
-      float:left;;
+      float:left;
+      display: block;
       }
       .nav-index {
         float:right;
@@ -36,13 +37,13 @@
       <a class="navbar-brand" href="#">Crystal Watkins</a>
     <ul class="navbar-index">
       <li class="nav-index">
-        <a class="nav-link" href="./index.html">About</a>
+        <a class="nav-link" href="index.html">About</a>
       </li>
       <li class="nav-portfolio">
-        <a class="nav-link" href="./Portfolio.html">Portfolio</a>
+        <a class="nav-link" href="Portfolio.html">Portfolio</a>
       </li>
       <li class="nav-contact">
-        <a class="nav-link" href="./contact.html">Contact</a>
+        <a class="nav-link" href="contact.html">Contact</a>
       </li>  
       </li>
     </ul>
