updating navbar for color

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       color: white;
       float:left;
       display: block;
+      border: 10%, 100%;
       }
       .nav-index {
         float:right;
@@ -32,9 +33,9 @@
     </style>
 </head>
 <body>
-    <!--Bootstrap Navbar!-->
+    <!--Bootstrap Navbar-->
     <nav class="navbar fixed-top navbar-light bg-white">
-      <a class="navbar-brand" href="#">Crystal Watkins</a>
+      <a class="navbar-brand" href="index.html">Crystal Watkins</a>
     <ul class="navbar-index">
       <li class="nav-index">
         <a class="nav-link" href="index.html">About</a>
@@ -48,7 +49,7 @@
       </li>
     </ul>
 </nav>
-    
+<div class="container"></div>
 
     <h1>Hello World!</h1>
 </body>
