--- a/index.html
+++ b/index.html
@@ -4,37 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crystal Watkins</title>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
+    crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
+    crossorigin="anonymous"></script>
     <link 
     rel="stylesheet" 
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
     crossorigin="anonymous"
     />
-    <style>
-    .navbar {
-      border-bottom: 3px solid lightgrey;
-      }
-    .navbar-brand {
-      background-color: darkturquoise;
-      color: white;
-      float:left;
-      display: block;
-      border: 10%, 100%;
-      }
-      .nav-index {
-        float:right;
-      }
-      .nav-portfolio {
-        float: right;
-      }
-      .nav-contact {
-        float: right;
-      }
-    </style>
+    <link rel= "stylesheet"
+    href= "02-Homework/Assets/Images/style.css"/>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
+    crossorigin="anonymous">
+  </script>
 </head>
 <body>
     <!--Bootstrap Navbar-->
-    <nav class="navbar fixed-top navbar-light bg-white">
+    <nav class="navbar expand-top navbar-light bg-white">
       <a class="navbar-brand" href="index.html">Crystal Watkins</a>
     <ul class="navbar-index">
       <li class="nav-index">
@@ -52,5 +43,30 @@
 <div class="container"></div>
 
     <h1>Hello World!</h1>
+
+    <div class="card mb-3" style="max-width: 540px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="..." class="card-img" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card border-light mb-3" style="max-width: 18rem;">
+      <div class="card-header">Header</div>
+      <div class="card-body">
+        <h5 class="card-title">Light card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+    
+
 </body>
 </html>
