--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <!--Bootstrap Navbar-->
-    <nav class="navbar expand-top navbar-light bg-white">
+    <nav class="navbar expand-top navbar-light bg-light">
       <a class="navbar-brand" href="index.html">Crystal Watkins</a>
     <ul class="navbar-index">
       <li class="nav-index">
@@ -40,6 +40,8 @@
       </li>
     </ul>
 </nav>
+
+
 <div class="container"></div>
 
     <h1>Hello World!</h1>
