--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     <nav class="navbar expand-top navbar-light bg-light">
       <a class="navbar-brand" href="index.html">Crystal Watkins</a>
     <ul class="navbar-index">
-      <li class="nav-index">
+      <p class="nav-index">
         <a class="nav-link" href="index.html">About</a>
-      </li>
-      <li class="nav-portfolio">
+      </p>
+      <p class="nav-portfolio">
         <a class="nav-link" href="Portfolio.html">Portfolio</a>
-      </li>
-      <li class="nav-contact">
+      </p>
+      <p class="nav-contact">
         <a class="nav-link" href="contact.html">Contact</a>
-      </li>  
-      </li>
+      </p>  
+    </p>
     </ul>
 </nav>
 
@@ -46,28 +46,36 @@
 
     <h1>Hello World!</h1>
 
-    <div class="card mb-3" style="max-width: 540px;">
-      <div class="row no-gutters">
-        <div class="col-md-4">
-          <img src="..." class="card-img" alt="...">
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card border-light mb-3" style="max-width: 18rem;">
-      <div class="card-header">Header</div>
+    <div class="card" style="width: 18rem;">
+      <h5 class="card-title">Card title</h5>
+      <img src="..." class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Light card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
     </div>
+
+
+    <!-- <div class="card border-light mb-3" style="max-width: 540px;"> -->
+      <!-- <div class="row no-gutters"> -->
+        <!-- <div class="card border-light mb-3" style="max-width: 18rem;"></div> -->
+        <!-- <div class="card-header">Header</div> -->
+        <!-- <div class="card-body"> -->
+        <!-- <div class="col-md-4"> -->
+          <!-- <img src="..." class="card-img" alt="..."> -->
+        <!-- </div> -->
+        <!-- <div class="col-md-8"> -->
+          <!-- <div class="card-body"> -->
+            <!-- <h5 class="card-title">Card title</h5> -->
+            <!-- <h5 class="card-title">Light card title</h5> -->
+            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+            <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
+            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
+    <!-- </div> -->
+      <!-- </div> -->
+    <!-- </div> -->
     
 
 </body>
