--- a/index.html
+++ b/index.html
@@ -42,41 +42,23 @@
 </nav>
 
 
-<div class="container"></div>
-
+<div class="container">
+  <div class= "row">
+  <div class="col-sm-6">
     <h1>Hello World!</h1>
 
     <div class="card" style="width: 18rem;">
       <h5 class="card-title">Card title</h5>
-      <img src="..." class="card-img-top" alt="...">
+      <img id= "Portfolio-Pic"src= "02-Homework/Assets/Images/tennis-court-background.jpg" alt="Tennis Court Background">
       <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text">Some quick example text to build on the card 
+          title and make up the bulk of the card's content.</p>
       </div>
     </div>
+  </div>
+  </div>
+</div>
 
-
-    <!-- <div class="card border-light mb-3" style="max-width: 540px;"> -->
-      <!-- <div class="row no-gutters"> -->
-        <!-- <div class="card border-light mb-3" style="max-width: 18rem;"></div> -->
-        <!-- <div class="card-header">Header</div> -->
-        <!-- <div class="card-body"> -->
-        <!-- <div class="col-md-4"> -->
-          <!-- <img src="..." class="card-img" alt="..."> -->
-        <!-- </div> -->
-        <!-- <div class="col-md-8"> -->
-          <!-- <div class="card-body"> -->
-            <!-- <h5 class="card-title">Card title</h5> -->
-            <!-- <h5 class="card-title">Light card title</h5> -->
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
-          <!-- </div> -->
-        <!-- </div> -->
-      <!-- </div> -->
-    <!-- </div> -->
-      <!-- </div> -->
-    <!-- </div> -->
-    
 
 </body>
 </html>
