about me box title and picture

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <body>
     <!--Bootstrap Navbar-->
     <nav class="navbar expand-top navbar-light bg-light">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
       <a class="navbar-brand" href="index.html">Crystal Watkins</a>
     <ul class="navbar-index">
       <p class="nav-index">
@@ -45,11 +46,10 @@
 <div class="container">
   <div class= "row">
   <div class="col-sm-6">
-    <h1>Hello World!</h1>
-
-    <div class="card" style="width: 18rem;">
-      <h5 class="card-title">Card title</h5>
-      <img id= "Portfolio-Pic"src= "02-Homework/Assets/Images/tennis-court-background.jpg" alt="Tennis Court Background">
+    <div class="card" style="width: 90%;">
+      <h5 class="card-title">About Me</h5>
+      <img id= "portfolio-pic"src= "http://placekitten.com/200/200" 
+      alt="Tennis Court Background">
       <div class="card-body">
         <p class="card-text">Some quick example text to build on the card 
           title and make up the bulk of the card's content.</p>
