index.html about me page updated

--- a/index.html
+++ b/index.html
@@ -41,22 +41,36 @@
     </p>
     </ul>
 </nav>
-
-
 <div class="container">
-  <div class= "row">
-  <div class="col-sm-6">
-    <div class="card" style="width: 90%;">
-      <h5 class="card-title">About Me</h5>
-      <img id= "portfolio-pic"src= "http://placekitten.com/200/200" 
-      alt="Tennis Court Background">
-      <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card 
-          title and make up the bulk of the card's content.</p>
-      </div>
+  <div class="row mt-5">
+    <div class="col-sm-8">
+<div class="jumbotron">
+  <h5 class="about-me">About Me</h5>
+  <hr class="my-4">
+  <div class="row">
+    <div class="col-sm-8">
+    <img id= "portfolio-pic"src= "http://placekitten.com/200/200"
+      alt="Place kitten">
+    </div>
+    <div class="col-sm-4">
+      <p>Lorem ipsum dolor sit amet consectetur 
+        adipisicing elit. Quos cupiditate ab eum nostrum 
+        facilis sapiente cumque, voluptatum </p>
     </div>
   </div>
+  <div class="row">
+  <div class="col-sm-12">
+    <p>Lorem ipsum dolor sit amet consectetur 
+      adipisicing elit. Quos cupiditate ab eum nostrum 
+      facilis sapiente cumque, voluptatum amet corporis? 
+      Quia hic cumque impedit obcaecati saepe quibusdam
+       maiores corporis repellat laboriosam.</p>
   </div>
+  </div>
+</div>
+</div>
+</div>
+</div>
 </div>
 
 
