portfolio pictures updated

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -41,7 +41,32 @@
     </ul>
 </nav>
 
+<div class="container">
+    <div class="row mt-1"> <!--CHANGE AS NEEDED!-->
+        <div class="col-sm-8">
+<div class="jumbotron">
+    <h1 class="portfolio">Portfolio</h1>
+    <hr class="my-4">
+<div class="flex-container">
+    <div class="col-sm-8">
+        <img id="picture-1" 
+        src= "http://placekitten.com/350/350" 
+        alt="Place Kitten1">
+    </div>
+<div class="flex-container">
+   <div class="col-sm-8">
+       <img id="picture-2" 
+       src= "http://placekitten.com/350/350" 
+       alt="Place Kitten2">
+   </div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 
+     
 
 </body>
 </html>
