--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
   <div class="row mt-5">
     <div class="col-sm-8">
 <div class="jumbotron">
-  <h5 class="about-me">About Me</h5>
+  <h1 class="about-me">About Me</h1>
   <hr class="my-4">
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-6">
     <img id= "portfolio-pic"src= "http://placekitten.com/200/200"
       alt="Place kitten">
     </div>
@@ -72,7 +72,10 @@
 </div>
 </div>
 </div>
-
-
 </body>
+<div class="footer">
+<p>
+  &copy; Copyright
+</p>
+</div>
 </html>
