--- a/contact.html
+++ b/contact.html
@@ -41,20 +41,45 @@
     </ul>
 </nav>
 
-<form>
+<div class="container">
+  <div class="row mt-1"> <!--CHANGE AS NEEDED!-->
+      <div class="col-sm-8">
+<div class="jumbotron">
+  <h1 class="contact">Contact</h1>
+  <hr class="my-4">
+  <form>
   <div class="form-group">
-      <label for="exampleFormControlInput1">Name</label>
-      <input type="name" class="form-control" id="exampleFormControlInput1" placeholder= "John Smith">
+      <label for="exampleFormControlInput1">Name</label></form>
+      <input type="name"
+      class="form-control" 
+      id="exampleFormControlInput1" 
+      placeholder= "John Smith">
     </div>
   <div class="form-group">
     <label for="exampleFormControlInput1">Email</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder= "example@gmail.com">
+    <input type="email" 
+    class="form-control" 
+    id="exampleFormControlInput1" 
+    placeholder= "example@gmail.com">
   </div>
   <div class="form-group">
-    <label for="exampleFormControlTextarea1">Example textarea</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></Message>
-  </div>
-</form>
+    <label for="exampleFormControlTextarea1">Message</label>
+    <textarea class="form-control"
+    id="exampleFormControlTextarea1"
+    rows="3"
+    placeholder="Message">
+
+
+
+
+
+
+
+
+</div>
+</div>
+</div>
+</div>
 
 </body>
 </html>
