--- a/Portfolio.html
+++ b/Portfolio.html
@@ -42,7 +42,7 @@
 </nav>
 
 <div class="container">
-    <div class="row mt-1"> <!--CHANGE AS NEEDED!-->
+    <div class="row mt-5"> <!--CHANGE AS NEEDED!-->
         <div class="col-sm-8">
 <div class="jumbotron">
     <h1 class="portfolio">Portfolio</h1>
@@ -65,8 +65,10 @@
 </div>
 </div>
 </div>
-
-     
-
 </body>
+<div class="footer">
+  <p>
+    &copy; Copyright
+  </p>
+  </div>
 </html>
