--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 </nav>
 
 <div class="container">
-  <div class="row mt-1"> <!--CHANGE AS NEEDED!-->
+  <div class="row mt-5"> <!--CHANGE AS NEEDED!-->
       <div class="col-sm-8">
 <div class="jumbotron">
   <h1 class="contact">Contact</h1>
@@ -67,19 +67,15 @@
     <textarea class="form-control"
     id="exampleFormControlTextarea1"
     rows="3"
-    placeholder="Message">
-
-
-
-
-
-
-
-
+    placeholder="Message"></textarea>
+    </div>
 </div>
 </div>
 </div>
-</div>
-
 </body>
+<div class="footer">
+  <p>
+    &copy; Copyright
+  </p>
+  </div>
 </html>
