--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,7 @@
     rows="3"
     placeholder="Message"></textarea>
     </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
 </div>
 </div>
 </div>
