updated css for about me page and sizing

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       alt="Place kitten">
     </div>
     <div class="col-sm-4">
-      <p>Lorem ipsum dolor sit amet consectetur 
+      <p id= "portfolio-text1">Lorem ipsum dolor sit amet consectetur 
         adipisicing elit. Quos cupiditate ab eum nostrum 
         facilis sapiente cumque, voluptatum </p>
     </div>
