updated pictures on portfolio page

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -50,13 +50,13 @@
 <div class="flex-container">
     <div class="col-sm-8">
         <img id="picture-1" 
-        src= "http://placekitten.com/350/350" 
+        src= "./02-Homework/Assets/Images/mystery-party.png" 
         alt="Place Kitten1">
     </div>
 <div class="flex-container">
    <div class="col-sm-8">
        <img id="picture-2" 
-       src= "http://placekitten.com/350/350" 
+       src= "./02-Homework/Assets/Images/christmas.png" 
        alt="Place Kitten2">
    </div>
 </div>
