--- a/index.html
+++ b/index.html
@@ -49,22 +49,25 @@
   <hr class="my-4">
   <div class="row">
     <div class="col-sm-6">
-    <img id= "portfolio-pic"src= "http://placekitten.com/200/200"
-      alt="Place kitten">
+    <img id= "about-me-pic"
+      src= "./02-Homework/Assets/about-me.png"
+      alt="Picture of Crystal Watkins">
     </div>
     <div class="col-sm-4">
-      <p id= "portfolio-text1">Lorem ipsum dolor sit amet consectetur 
-        adipisicing elit. Quos cupiditate ab eum nostrum 
-        facilis sapiente cumque, voluptatum </p>
+      <p id= "portfolio-text1">Hi, my name is Crystal Watkins and I 
+        will graduate from the GT full stack flex program in August 
+        2020. I live in Atlanta, GA. </p>
     </div>
   </div>
   <div class="row">
   <div class="col-sm-12">
-    <p>Lorem ipsum dolor sit amet consectetur 
-      adipisicing elit. Quos cupiditate ab eum nostrum 
-      facilis sapiente cumque, voluptatum amet corporis? 
-      Quia hic cumque impedit obcaecati saepe quibusdam
-       maiores corporis repellat laboriosam.</p>
+    <p>I played tennis at Florida Southern and still enjoy playing on
+      ALTA teams and T2 leagues in Atlanta. I love hanging out with my 
+      friends. For more pictures of the adventures we take and fun things
+      we do, please see my Portfolio page! I also love walking trails around 
+      with my husband, Alex and our sweet dog, Mary! For any other questions about me, 
+      fill out your contact information and I'd love to reach out to you!
+      </p>
   </div>
   </div>
 </div>
