--- a/index.html
+++ b/index.html
@@ -1,84 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crystal Watkins</title>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Crystal Watkins</title>
+  <link rel="stylesheet" href="02-Homework/Assets/Images/style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
-    <link 
-    rel="stylesheet" 
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
-    crossorigin="anonymous"
-    />
-    <link rel= "stylesheet"
-    href= "02-Homework/Assets/Images/style.css"/>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
-    crossorigin="anonymous">
-  </script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
 </head>
+
 <body>
-    <!--Bootstrap Navbar-->
-    <nav class="navbar expand-top navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
-      <a class="navbar-brand" href="index.html">Crystal Watkins</a>
-    <ul class="navbar-index">
-      <p class="nav-index">
-        <a class="nav-link" href="index.html">About</a>
-      </p>
-      <p class="nav-portfolio">
-        <a class="nav-link" href="Portfolio.html">Portfolio</a>
-      </p>
-      <p class="nav-contact">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </p>  
-    </p>
-    </ul>
-</nav>
-<div class="container">
-  <div class="row mt-5">
-    <div class="col-sm-8">
-<div class="jumbotron">
-  <h1 class="about-me">About Me</h1>
-  <hr class="my-4">
-  <div class="row">
-    <div class="col-sm-6">
-    <img id= "about-me-pic"
-      src= "./02-Homework/Assets/about-me.png"
-      alt="Picture of Crystal Watkins">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="./index.html">Crystal Watkins</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" 
+    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+    aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="Portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="contact.html">Contact Me <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
     </div>
-    <div class="col-sm-4">
-      <p id= "portfolio-text1">Hi, my name is Crystal Watkins and I 
-        will graduate from the GT full stack flex program in August 
-        2020. I live in Atlanta, GA. </p>
+  </nav>
+
+  <div class="container">
+    <div class="row mt-5">
+      <!-- <div class="col-sm-12"> -->
+      <div class="jumbotron">
+
+        <h1 class="about-me">About Me</h1>
+        <hr class="my-4">
+        <div class="row">
+          <div class="col-sm-12 d-flex justify-content-start align-items-center">
+            <img id="about-me-pic" src="./02-Homework/Assets/about-me.png" alt="Picture of Crystal Watkins" />
+            <p id="portfolio-text1">Hi, my name is Crystal Watkins and I
+              will graduate from the GT full stack flex program in August
+              2020. I live in Atlanta, GA. I am a 7 on the enneagram. I love
+              being active and hanging out with friends, doing everything that
+              I can fit within 24 hours! I used to work in logistics with Enterprise,
+              but when COVID-19 hit, I was unfortunately laid off from my job after
+              6 years with the company. This means that I now have the opportunity to
+              pursue a completely different career and am so excited that I am able to
+              take this course! While currently you can find me sitting on the couch
+              binging another tv on show Netlix, I usually prefer to be active! I played
+              at Florida Southern (Go Mocs!) and still enjoy playing on ALTA teams and
+              the T2 leagues in Atlanta. I love hanging out with my friends. For more photos,
+              look at my
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <p id="portfolio-text1">Portfolio page! I also love walking trails around the Atlanta area 
+              with my husband, Alex and our sweet dog, Mary! For any other questions 
+              about me, fill out your contact information and I'd love to reach out to you!
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
+    <!-- </div> -->
   </div>
-  <div class="row">
-  <div class="col-sm-12">
-    <p>I played tennis at Florida Southern and still enjoy playing on
-      ALTA teams and T2 leagues in Atlanta. I love hanging out with my 
-      friends. For more pictures of the adventures we take and fun things
-      we do, please see my Portfolio page! I also love walking trails around 
-      with my husband, Alex and our sweet dog, Mary! For any other questions about me, 
-      fill out your contact information and I'd love to reach out to you!
-      </p>
-  </div>
-  </div>
-</div>
-</div>
-</div>
-</div>
-</div>
 </body>
 <div class="footer">
-<p>
-  &copy; Copyright
-</p>
+  <p>
+    &copy; Copyright
+  </p>
 </div>
+
 </html>
