--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,18 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crystal Watkins</title>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-    crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="02-Homework/Assets/Images/style.css" />
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
+
 </head>
 
 <body>
@@ -48,48 +41,64 @@
         <h1 class="portfolio">Portfolio</h1>
         <hr class="my-4">
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-sm-6">
             <figure>
               <img id="portfolio-pic" src="./02-Homework/Assets/Images/mystery-party.png" class="rounded float-left"
                 alt="Crystal and Friends Murder Mystery Party">
               <figcaption>Having Fun with Friends at a Murder Mystery Party</figcaption>
             </figure>
+          </div>
+          <div class="col-sm-6">
+            <figure>
             <img id="portfolio-pic" src="./02-Homework/Assets/Images/christmas.png" class="rounded float-right"
               alt="Crystal and Friends Christmas Party">
             <figcaption>Having Fun with Friends at a Christmas "Onesie" Party</figcaption>
+            </figure>
           </div>
         </div>
-
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-sm-6">
             <figure>
               <img id="portfolio-pic" src="./02-Homework/Assets/Images/in-laws.png" class="rounded float-left"
                 alt="Crystal and In Laws on Wedding Day">
               <figcaption>My Husband's Immediate Family on Our Wedding Day</figcaption>
-            </figure>
+              </figure>
+          </div>
+          <div class="col-sm-6">
+            <figure>
             <img id="portfolio-pic" src="./02-Homework/Assets/Images/my-family.png" class="rounded float-right"
               alt="Crystal and Immediate Family on Wedding Day">
             <figcaption>My Immediate Family on Our wedding Day</figcaption>
+            </figure>
           </div>
         </div>
-
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-sm-6">
             <figure>
               <img id="portfolio-pic" src="./02-Homework/Assets/Images/asheville.png" class="rounded float-left"
                 alt="Crystal and Friends in Asheville">
               <figcaption>Having Fun with Friends in Asheville</figcaption>
             </figure>
-            <img id="portfolio-pic" src="./02-Homework/Assets/Images/aunt.png" class="rounded float-right"
-              alt="Crystal and Alex with their Neice">
-            <figcaption>Hanging with Our Niece, McClane" Party</figcaption>
           </div>
+          <div class="col-sm-6">
+            <figure>
+          <img id="portfolio-pic" src="./02-Homework/Assets/Images/aunt.png" class="rounded float-right"
+            alt="Crystal and Alex with their Neice">
+          <figcaption>Hanging with Our Niece, McClane" Party</figcaption>
+          </figure>
         </div>
-
-      </div>
-    </div>
+        </div>
   </div>
-
+  </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
 </body>
 <div class="footer">
   <p>
