--- a/index.html
+++ b/index.html
@@ -5,18 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crystal Watkins</title>
+  <link rel="stylesheet" 
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
+  integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
+  crossorigin="anonymous">
   <link rel="stylesheet" href="02-Homework/Assets/Images/style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
 </head>
 
 <body>
@@ -49,8 +42,8 @@
         <h1 class="about-me">About Me</h1>
         <hr class="my-4">
         <div class="row">
-          <div class="col-sm-12 d-flex justify-content-start align-items-center">
-            <img id="about-me-pic" src="./02-Homework/Assets/about-me.png" alt="Picture of Crystal Watkins" />
+          <div class="col-sm-12">
+            <img id="about-me-pic" src="./02-Homework/Assets/about-me.png" alt="Picture of Crystal Watkins" class="float-left" />
             <p id="portfolio-text1">Hi, my name is Crystal Watkins and I
               will graduate from the GT full stack flex program in August
               2020. I live in Atlanta, GA. I am a 7 on the enneagram. I love
@@ -63,15 +56,18 @@
               binging another tv on show Netlix, I usually prefer to be active! I played
               at Florida Southern (Go Mocs!) and still enjoy playing on ALTA teams and
               the T2 leagues in Atlanta. I love hanging out with my friends. For more photos,
-              look at my
+              look at my Portfolio page! I also love walking trails around the Atlanta area 
+              with my husband, Alex and our sweet dog, Mary! For any other questions about me, 
+              fill out your contact information and I'd love to reach out to you!
             </p>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-12">
-            <p id="portfolio-text1">Portfolio page! I also love walking trails around the Atlanta area 
-              with my husband, Alex and our sweet dog, Mary! For any other questions 
-              about me, fill out your contact information and I'd love to reach out to you!
+            <p id="portfolio-text1"> 
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam illo quisquam 
+              pariatur earum vero, eum voluptatum cumque vitae tenetur est amet hic officia 
+              laudantium eos aliquam quia aspernatur impedit nobis!
             </p>
           </div>
         </div>
@@ -79,6 +75,17 @@
     </div>
     <!-- </div> -->
   </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
+  crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
+  integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
+  crossorigin="anonymous"></script>
+
+  // </script>
 </body>
 <div class="footer">
   <p>
