personalized the about me paragraph

--- a/index.html
+++ b/index.html
@@ -71,10 +71,14 @@
         </div>
         <div class="row">
           <section class="col-sm-12">
-            <p id="portfolio-text1"> 
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam illo quisquam 
-              pariatur earum vero, eum voluptatum cumque vitae tenetur est amet hic officia 
-              laudantium eos aliquam quia aspernatur impedit nobis!
+            <p id="portfolio-text1"> Some other hobbies that I enjoy doing are watching
+              Broadway shows along with Disney movies. I prefer the older movies, but 
+              some of the newer movies are extremely well made! I have recently started
+              reading more, but I have relied more and more on audiobooks over a physical 
+              book, but I absolutely love my Kindle! I prefer fiction to non-fiction, but 
+              I'm also a sucker for lots of improvement books- I really think your attitude
+              and mindset can create the outcome you have! PS- I think I'm at enough words 
+              now that I can stop!
             </p>
           </section>
         </div>
