so many changes

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -43,48 +43,54 @@
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="./02-Homework/Assets/Images/mystery-party.png" class="rounded float-left"
-                alt="Crystal and Friends Murder Mystery Party">
-              <figcaption>Having Fun with Friends at a Murder Mystery Party</figcaption>
+              <img id="portfolio-pic" src="./02-Homework/Assets/Images/Project1.png" class="rounded float-left"
+                alt="Project One">
+              <figcaption>Project One- Destination Staycation</figcaption>
             </figure>
+            <a href= "https://crystalwatkins.github.io/gt-project-1/.">Project One</a>
           </div>
           <div class="col-sm-6">
             <figure>
-            <img id="portfolio-pic" src="./02-Homework/Assets/Images/christmas.png" class="rounded float-right"
-              alt="Crystal and Friends Christmas Party">
-            <figcaption>Having Fun with Friends at a Christmas "Onesie" Party</figcaption>
+            <img id="portfolio-pic" src="./02-Homework/Assets/Images/weather.png" class="rounded float-right"
+              alt="Third Party Weather App">
+            <figcaption>Third Party Weather API Webpage</figcaption>
             </figure>
+            <a href="https://crystalwatkins.github.io/gt-hw-server-side-api-weather-dashboard/">Weather Dashboard</a>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="./02-Homework/Assets/Images/in-laws.png" class="rounded float-left"
-                alt="Crystal and In Laws on Wedding Day">
-              <figcaption>My Husband's Immediate Family on Our Wedding Day</figcaption>
+              <img id="portfolio-pic" src="./02-Homework/Assets/Images/workDay.png" class="rounded float-left"
+                alt="Work Day Scheduler">
+              <figcaption>Work Day Scheduler</figcaption>
               </figure>
+              <a href= "https://crystalwatkins.github.io/gt-hw-thirdpartyapi-work-day-scheduler/">Work Day Scheduler</a>
           </div>
           <div class="col-sm-6">
             <figure>
-            <img id="portfolio-pic" src="./02-Homework/Assets/Images/my-family.png" class="rounded float-right"
-              alt="Crystal and Immediate Family on Wedding Day">
-            <figcaption>My Immediate Family on Our wedding Day</figcaption>
+            <img id="portfolio-pic" src="./02-Homework/Assets/Images/codingQuiz.png" class="rounded float-right"
+              alt="Web Api Quiz Page">
+            <figcaption>Web Api Quiz Page</figcaption>
             </figure>
+            <a href= "https://crystalwatkins.github.io/gt-hw-web-apis-quiz/">Web Api Quiz</a>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="./02-Homework/Assets/Images/asheville.png" class="rounded float-left"
-                alt="Crystal and Friends in Asheville">
-              <figcaption>Having Fun with Friends in Asheville</figcaption>
+              <img id="portfolio-pic" src="./02-Homework/Assets/Images/passwordGenerator.png" class="rounded float-left"
+                alt="Password Generator">
+              <figcaption>Password Generator</figcaption>
+              <a href= "https://crystalwatkins.github.io/gt-hw-js-password-generator/">Password Generator</a>
             </figure>
           </div>
           <div class="col-sm-6">
             <figure>
-          <img id="portfolio-pic" src="./02-Homework/Assets/Images/aunt.png" class="rounded float-right"
-            alt="Crystal and Alex with their Neice">
-          <figcaption>Hanging with Our Niece, McClane" Party</figcaption>
+          <img id="portfolio-pic" src="./02-Homework/Assets/Images/semantics.png" class="rounded float-right"
+            alt="Semantic Tags">
+          <figcaption>Using Semantic Tags in HTML</figcaption>
+          <a href= "https://crystalwatkins.github.io/gt-semantic-html-homework-01/">Semantics in HTML</a>
           </figure>
         </div>
         </div>
