--- a/index.html
+++ b/index.html
@@ -50,37 +50,20 @@
             class="float-left" /> 
           </figure>
           <section>
-            <p id="portfolio-text1">Hi, my name is Crystal Watkins and I
+            <p id="portfolio-text1">My name is Crystal Watkins and I
               will graduate from the GT full stack flex program in August
-              2020. I live in Atlanta, GA. I am a 7 on the enneagram. I love
-              being active and hanging out with friends, doing everything that
-              I can fit within 24 hours! I used to work in logistics with Enterprise,
-              but when COVID-19 hit, I was unfortunately laid off from my job after
-              6 years with the company. This means that I now have the opportunity to
-              pursue a completely different career and am so excited that I am able to
-              take this course! While currently you can find me sitting on the couch
-              binging another tv on show Netlix, I usually prefer to be active! I played
-              at Florida Southern (Go Mocs!) and still enjoy playing on ALTA teams and
-              the T2 leagues in Atlanta. I love hanging out with my friends. For more photos,
-              look at my Portfolio page! I also love walking trails around the Atlanta area 
-              with my husband, Alex and our sweet dog, Mary! For any other questions about me, 
-              fill out your contact information and I'd love to reach out to you!
-            </p>
+              2020. Please see all contact information below!</p>
+              <p> My address is: 3842 Chattahoochee Summit Dr SE, Atlanta, 
+                GA 30339</p>
+                <p>My phone number is: 404-276-4570</p>
+                <p>
+              <a href= "https://github.com/CrystalWatkins"> Github Portfolio</a>
+                </br>
+              <a href="crystalWatkinsResume.pdf"> Resume</a>
+            </br>
+              <a href="https://www.linkedin.com/in/crystalwatkins1/"> LinkedIn</a>
           </section>
           </div>
-        </div>
-        <div class="row">
-          <section class="col-sm-12">
-            <p id="portfolio-text1"> Some other hobbies that I enjoy doing are watching
-              Broadway shows along with Disney movies. I prefer the older movies, but 
-              some of the newer movies are extremely well made! I have recently started
-              reading more, but I have relied more and more on audiobooks over a physical 
-              book, but I absolutely love my Kindle! I prefer fiction to non-fiction, but 
-              I'm also a sucker for lots of improvement books- I really think your attitude
-              and mindset can create the outcome you have! PS- I think I'm at enough words 
-              now that I can stop!
-            </p>
-          </section>
         </div>
       </div>
     </div>
@@ -96,7 +79,7 @@
   integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
   crossorigin="anonymous"></script>
 
-  // </script>
+ </script>
 </body>
 <footer class="footer">
   <p>
