--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                 GA 30339</p>
                 <p>My phone number is: 404-276-4570</p>
                 <p>
-              <a href= "https://github.com/CrystalWatkins"> Github Portfolio</a>
+              <a class="links" href= "https://github.com/CrystalWatkins"> Github Portfolio</a>
                 </br>
-              <a href="crystalWatkinsResume.pdf"> Resume</a>
+              <a class="links" href="crystalWatkinsResume.pdf"> Resume</a>
             </br>
-              <a href="https://www.linkedin.com/in/crystalwatkins1/"> LinkedIn</a>
+              <a class="links" href="https://www.linkedin.com/in/crystalwatkins1/"> LinkedIn</a>
           </section>
           </div>
         </div>
