updated resume link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>
               <a class="links" href= "https://github.com/CrystalWatkins"> Github Portfolio</a>
                 </br>
-              <a class="links" href="crystalWatkinsResume.pdf"> Resume</a>
+              <a class="links" href="CrystalWatkinsResume.pdf"> Resume</a>
             </br>
               <a class="links" href="https://www.linkedin.com/in/crystalwatkins1/"> LinkedIn</a>
           </section>
