updated folders and all portfolio pages

--- a/HTML/Portfolio.html
+++ b/HTML/Portfolio.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="02-Homework/Assets/Images/style.css" />
+  <link rel="stylesheet" href="../Assets/Style/style.css" />
 
 </head>
 
@@ -40,10 +40,68 @@
       <div class="jumbotron">
         <h1 class="portfolio">Portfolio</h1>
         <hr class="my-4">
+
+
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="./02-Homework/Assets/Images/Project1.png" class="rounded float-left"
+              <img id="portfolio-pic" src="../Assets/Images/DonenDusted.png" class="rounded float-left"
+                alt="Done n Dusted">
+              <figcaption>Done n Dusted</figcaption>
+            </figure>
+            <a href= "">Done n Dusted</a>
+          </div>
+          <div class="col-sm-6">
+            <figure>
+            <img id="portfolio-pic" src="../Assets/Images/aboutme1.png" class="rounded float-right"
+              alt="Profile Page">
+            <figcaption>Profile Page</figcaption>
+            </figure>
+            <a href="">Profile Page</a>
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="col-sm-6">
+            <figure>
+              <img id="portfolio-pic" src="../Assets/Images/EmployeeMngmt.png" class="rounded float-left"
+                alt="Employee Management">
+              <figcaption>Employee Management</figcaption>
+            </figure>
+            <a href= "">Employee Management</a>
+          </div>
+          <div class="col-sm-6">
+            <figure>
+            <img id="portfolio-pic" src="../Assets/Images/notetaker.png" class="rounded float-right"
+              alt="Note Taker">
+            <figcaption>Note Taker</figcaption>
+            </figure>
+            <a href="https://github.com/CrystalWatkins/gt-hw-node-express-note-taker">Note Taker</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <figure>
+              <img id="portfolio-pic" src="../Assets/Images/readme.png" class="rounded float-left"
+                alt="Read Me Generator">
+              <figcaption>Read Me Generator</figcaption>
+            </figure>
+            <a href= "https://github.com/CrystalWatkins/gt-hw-readme-generator">Read Me Generator</a>
+          </div>
+          <div class="col-sm-6">
+            <figure>
+            <img id="portfolio-pic" src="../Assets/Images/mysqlemployee.png" class="rounded float-right"
+              alt="Employee Tracker">
+            <figcaption>Employee Tracker</figcaption>
+            </figure>
+            <a href="https://github.com/CrystalWatkins/gt-hw-my-sql-employee-tracker">Employee Tracker</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <figure>
+              <img id="portfolio-pic" src="../Assets/Images/Project1.png" class="rounded float-left"
                 alt="Project One">
               <figcaption>Project One- Destination Staycation</figcaption>
             </figure>
@@ -51,7 +109,7 @@
           </div>
           <div class="col-sm-6">
             <figure>
-            <img id="portfolio-pic" src="./02-Homework/Assets/Images/weather.png" class="rounded float-right"
+            <img id="portfolio-pic" src="../Assets/Images/weather.png" class="rounded float-right"
               alt="Third Party Weather App">
             <figcaption>Third Party Weather API Webpage</figcaption>
             </figure>
@@ -61,7 +119,7 @@
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="./02-Homework/Assets/Images/workDay.png" class="rounded float-left"
+              <img id="portfolio-pic" src="../Assets/Images/workDay.png" class="rounded float-left"
                 alt="Work Day Scheduler">
               <figcaption>Work Day Scheduler</figcaption>
               </figure>
@@ -69,7 +127,7 @@
           </div>
           <div class="col-sm-6">
             <figure>
-            <img id="portfolio-pic" src="./02-Homework/Assets/Images/codingQuiz.png" class="rounded float-right"
+            <img id="portfolio-pic" src="../Assets/Images/codingQuiz.png" class="rounded float-right"
               alt="Web Api Quiz Page">
             <figcaption>Web Api Quiz Page</figcaption>
             </figure>
@@ -79,7 +137,7 @@
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="./02-Homework/Assets/Images/passwordGenerator.png" class="rounded float-left"
+              <img id="portfolio-pic" src="../Assets/Images/passwordGenerator.png" class="rounded float-left"
                 alt="Password Generator">
               <figcaption>Password Generator</figcaption>
               <a href= "https://crystalwatkins.github.io/gt-hw-js-password-generator/">Password Generator</a>
@@ -87,7 +145,7 @@
           </div>
           <div class="col-sm-6">
             <figure>
-          <img id="portfolio-pic" src="./02-Homework/Assets/Images/semantics.png" class="rounded float-right"
+          <img id="portfolio-pic" src="../Assets/Images/semantics.png" class="rounded float-right"
             alt="Semantic Tags">
           <figcaption>Using Semantic Tags in HTML</figcaption>
           <a href= "https://crystalwatkins.github.io/gt-semantic-html-homework-01/">Semantics in HTML</a>
