--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,7 @@
   href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
   integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
   crossorigin="anonymous">
-  <link rel="stylesheet" href="02-Homework/Assets/Images/style.css" />
+  <link rel="stylesheet" href="../Assets/Style/style.css" />
 </head>
 
 <body>
@@ -45,7 +45,7 @@
           <div class="col-sm-12">
             <figure>
             <img id="about-me-pic" 
-            src="./02-Homework/Assets/Images/about-me.png" 
+            src="../Assets/Images/about-me.png" 
             alt="Picture of Crystal Watkins" 
             class="float-left" /> 
           </figure>
