updated pathing and index.html outside folder

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="../Assets/Style/style.css" />
+  <link rel="stylesheet" href="./Assets/Style/style.css" />
 
 </head>
 
@@ -45,7 +45,7 @@
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="../Assets/Images/DonenDusted.png" class="rounded float-left"
+              <img id="portfolio-pic" src="./Assets/Images/DonenDusted.png" class="rounded float-left"
                 alt="Done n Dusted">
               <figcaption>Done n Dusted</figcaption>
             </figure>
@@ -53,7 +53,7 @@
           </div>
           <div class="col-sm-6">
             <figure>
-            <img id="portfolio-pic" src="../Assets/Images/aboutme1.png" class="rounded float-right"
+            <img id="portfolio-pic" src="./Assets/Images/aboutme1.png" class="rounded float-right"
               alt="Profile Page">
             <figcaption>Profile Page</figcaption>
             </figure>
@@ -65,7 +65,7 @@
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="../Assets/Images/EmployeeMngmt.png" class="rounded float-left"
+              <img id="portfolio-pic" src="./Assets/Images/EmployeeMngmt.png" class="rounded float-left"
                 alt="Employee Management">
               <figcaption>Employee Management</figcaption>
             </figure>
@@ -73,7 +73,7 @@
           </div>
           <div class="col-sm-6">
             <figure>
-            <img id="portfolio-pic" src="../Assets/Images/notetaker.png" class="rounded float-right"
+            <img id="portfolio-pic" src="./Assets/Images/notetaker.png" class="rounded float-right"
               alt="Note Taker">
             <figcaption>Note Taker</figcaption>
             </figure>
@@ -83,7 +83,7 @@
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="../Assets/Images/readme.png" class="rounded float-left"
+              <img id="portfolio-pic" src="./Assets/Images/readme.png" class="rounded float-left"
                 alt="Read Me Generator">
               <figcaption>Read Me Generator</figcaption>
             </figure>
@@ -91,7 +91,7 @@
           </div>
           <div class="col-sm-6">
             <figure>
-            <img id="portfolio-pic" src="../Assets/Images/mysqlemployee.png" class="rounded float-right"
+            <img id="portfolio-pic" src="./Assets/Images/mysqlemployee.png" class="rounded float-right"
               alt="Employee Tracker">
             <figcaption>Employee Tracker</figcaption>
             </figure>
@@ -101,7 +101,7 @@
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="../Assets/Images/Project1.png" class="rounded float-left"
+              <img id="portfolio-pic" src="./Assets/Images/Project1.png" class="rounded float-left"
                 alt="Project One">
               <figcaption>Project One- Destination Staycation</figcaption>
             </figure>
@@ -109,7 +109,7 @@
           </div>
           <div class="col-sm-6">
             <figure>
-            <img id="portfolio-pic" src="../Assets/Images/weather.png" class="rounded float-right"
+            <img id="portfolio-pic" src="./Assets/Images/weather.png" class="rounded float-right"
               alt="Third Party Weather App">
             <figcaption>Third Party Weather API Webpage</figcaption>
             </figure>
@@ -119,7 +119,7 @@
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="../Assets/Images/workDay.png" class="rounded float-left"
+              <img id="portfolio-pic" src="./Assets/Images/workDay.png" class="rounded float-left"
                 alt="Work Day Scheduler">
               <figcaption>Work Day Scheduler</figcaption>
               </figure>
@@ -127,7 +127,7 @@
           </div>
           <div class="col-sm-6">
             <figure>
-            <img id="portfolio-pic" src="../Assets/Images/codingQuiz.png" class="rounded float-right"
+            <img id="portfolio-pic" src="./Assets/Images/codingQuiz.png" class="rounded float-right"
               alt="Web Api Quiz Page">
             <figcaption>Web Api Quiz Page</figcaption>
             </figure>
@@ -137,7 +137,7 @@
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img id="portfolio-pic" src="../Assets/Images/passwordGenerator.png" class="rounded float-left"
+              <img id="portfolio-pic" src="./Assets/Images/passwordGenerator.png" class="rounded float-left"
                 alt="Password Generator">
               <figcaption>Password Generator</figcaption>
               <a href= "https://crystalwatkins.github.io/gt-hw-js-password-generator/">Password Generator</a>
@@ -145,7 +145,7 @@
           </div>
           <div class="col-sm-6">
             <figure>
-          <img id="portfolio-pic" src="../Assets/Images/semantics.png" class="rounded float-right"
+          <img id="portfolio-pic" src="./Assets/Images/semantics.png" class="rounded float-right"
             alt="Semantic Tags">
           <figcaption>Using Semantic Tags in HTML</figcaption>
           <a href= "https://crystalwatkins.github.io/gt-semantic-html-homework-01/">Semantics in HTML</a>
