--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
   integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
   crossorigin="anonymous">
-  <link rel="stylesheet" href="../Assets/Style/style.css" />
+  <link rel="stylesheet" href="./Assets/Style/style.css" />
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="./index.html">Crystal Watkins</a>
+    <a class="navbar-brand" href="index.html">Crystal Watkins</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" 
     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
     aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
           <div class="col-sm-12">
             <figure>
             <img id="about-me-pic" 
-            src="../Assets/Images/about-me.png" 
+            src="./Assets/Images/about-me.png" 
             alt="Picture of Crystal Watkins" 
             class="float-left" /> 
           </figure>
